--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "velocity-animate": "^1.5.2",
+        "vue-router": "^3.0.1",
+        "vue2-notify": "^1.4.0",
+        "vuex": "^3.0.1"
     }
 }
